Cambios de fuente css, cambios en  el registro de usuarios
Ahora el usuario tiene que poner la contraseña dos veces, con un mensaje de error si no son correctas
Además de tener que poner un email de formato adecuado
Una vez hecho el registro, se muestra un mensaje de Registro correcto, luego se envía a la página de inicio

--- a/frontend-app/src/index.css
+++ b/frontend-app/src/index.css
@@ -1,12 +1,21 @@
-/* src/index.css */
+@font-face {
+  font-family: Play;
+  src: url('../src/assets/fonts/Play-Regular.ttf');
+  /*Si luego no carga, @/assets/fonts/Play-Regular.ttf o new URL('./assets/fonts/Play-Regular.ttf', import.meta.url) */
+  font-weight: 400;
+  font-style: normal;
+}
 @import "tailwindcss";
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@theme{
+  --font-play: Play, "sans-serif";
+}
+
 body {
-  @apply bg-gray-100 text-gray-800 font-sans;
+  @apply bg-gray-100 text-gray-800 font-mono;
 }
 
 a {
@@ -14,5 +23,5 @@ a {
 }
 
 button {
-  @apply bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition;
+  @apply font-play bg-green-500 text-white px-4 py-2 rounded hover:bg-red-700 transition;
 }
