--- a/frontend-app/src/index.css
+++ b/frontend-app/src/index.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: Play;
   src: url('../src/assets/fonts/Play-Regular.ttf');
-  /*Si luego no carga, @/assets/fonts/Play-Regular.ttf o new URL('./assets/fonts/Play-Regular.ttf', import.meta.url) */
   font-weight: 400;
   font-style: normal;
 }
+
 @import "tailwindcss";
 @tailwind base;
 @tailwind components;
@@ -13,15 +13,24 @@
 @theme{
   --font-play: Play, "sans-serif";
 }
+:root {
+  --color-bg: #f3f4f6;
+  --color-bg-secondary: #ffffff;
+  --color-text: #1f2937;
+  --color-primary: #1D4ED8;
+  --color-secondary: #2563EB;
+}
+
+.dark {
+  --color-bg: #111827;
+  --color-bg-secondary: #1f2937;
+  --color-text: #e5e7eb;
+  --color-primary: #3b82f6;
+  --color-secondary: #60a5fa;
+}
 
 body {
-  @apply bg-gray-100 text-gray-800 font-mono;
-}
-
-a {
-  @apply no-underline;
-}
-
-button {
-  @apply font-play bg-green-500 text-white px-4 py-2 rounded hover:bg-red-700 transition;
+  background: var(--color-bg);
+  color: var(--color-text);
+  font-family: var(--font-play);
 }
